--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "tiktok-bio-checker",
   "version": "1.0.0",
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "build": "echo 'No build step'"
+  }
 }
